# ColmapEditor

./: CMakeLists.txt  README.md
src/: MainFrame.cpp  MainFrame.h  OSGCanvas.cpp  OSGCanvas.h  Scene.cpp  Scene.h  main.cpp
